--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "edison-io": "^0.10.0",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
